migrating to vavr, list migration done