@@ -1,19 +1,15 @@
 package klass.builders;
 
+import io.vavr.collection.List;
 import klass.Modifier;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import static parsing.RegexConstants.*;
+import static parsing.RegexConstants.ANNOTATION;
 
 public abstract class AbstractBuilder {
     protected String name;
     protected String type;
     protected boolean visible;
-    protected List<Modifier> modifiers = new ArrayList<>();
+    protected List<Modifier> modifiers = List.empty();
     protected List<String> annotations;
 
     protected void parseVisibility(String definition) {
@@ -26,60 +22,69 @@ public abstract class AbstractBuilder {
     }
 
     protected void parseAnnotations(String definition) {
-        annotations = Arrays.stream(definition.split("\\s")).filter(word -> word.matches(ANNOTATION)).collect(Collectors.toList());
+        annotations = List.of(definition.split("\\s")).filter(word -> word.matches(ANNOTATION));
     }
 
     protected int presentModifiers(String definition) {
         int presentModifiers = 0;
-        List<String> possibleModifiers = Arrays.asList("protected", "public", "private", "static", "final", "<.*>");
-        List<String> words = Arrays.asList(definition.split("\\s"));
+        List<String> possibleModifiers = List.of("protected", "public", "private", "static", "final", "<.*>");
+        List<String> words = List.of(definition.split("\\s"));
 
         for (String modifier : possibleModifiers) {
-            if (words.stream().anyMatch(word -> word.matches(modifier))) presentModifiers++;
+            if (words.exists(word -> word.matches(modifier))) presentModifiers++;
         }
 
         return presentModifiers;
     }
 
     protected void parseModifiers(String definition) {
-        List<String> words = Arrays.asList(definition.split("\\s"));
+        List<String> words = List.of(definition.split("\\s"));
 
         switch (words.get(0)) {
             case "public":
-                modifiers.add(Modifier.Public);
+                modifiers = modifiers.append(Modifier.PUBLIC);
+                break;
             case "private":
-                modifiers.add(Modifier.Private);
+                modifiers = modifiers.append(Modifier.PRIVATE);
+                break;
             case "protected":
-                modifiers.add(Modifier.Protected);
+                modifiers = modifiers.append(Modifier.PROTECTED);
+                break;
             case "default":
-                modifiers.add(Modifier.Default);
+                modifiers = modifiers.append(Modifier.DEFAULT);
+                break;
             default:
-                modifiers.add(Modifier.PackagePrivate);
+                modifiers = modifiers.append(Modifier.PACKAGE_PRIVATE);
         }
 
         for (String word : words) {
-            if (word.equals("static"))
-                modifiers.add(Modifier.Static);
-            if (word.equals("final"))
-                modifiers.add(Modifier.Final);
-            if (word.equals("abstract"))
-                modifiers.add(Modifier.Abstract);
-            if (word.matches("<.*>"))
-                modifiers.add(Modifier.Generic);
+            if (word.equals("static")) {
+                modifiers = modifiers.append(Modifier.STATIC);
+            }
+            if (word.equals("final")) {
+                modifiers = modifiers.append(Modifier.FINAL);
+            }
+            if (word.equals("abstract")) {
+                modifiers = modifiers.append(Modifier.ABSTRACT);
+            }
+            if (word.matches("<.*>")) {
+                modifiers = modifiers.append(Modifier.GENERIC);
+            }
         }
     }
 
     public void addAnotations(List<String> annotations) {
-        if (this.annotations == null)
-            this.annotations = new ArrayList<>();
+        if (this.annotations == null) {
+            this.annotations = List.empty();
+        }
 
-        this.annotations.addAll(annotations);
+        this.annotations = this.annotations.appendAll(annotations);
     }
 
     protected String removeAnnotations(String definition) {
         StringBuilder sb = new StringBuilder();
 
-        Arrays.stream(definition.split("\\s|\n")).filter(word -> !word.matches(ANNOTATION)).forEach(word -> sb.append(word).append(" "));
+        List.of(definition.split("\\s|\n")).filter(word -> !word.matches(ANNOTATION)).forEach(word -> sb.append(word).append(" "));
 
         return sb.toString();
     }
