@@ -1,35 +1,32 @@
 package utils;
 
+import io.vavr.collection.List;
 import klass.Attribute;
 import klass.Klass;
 import klass.Modifier;
 import klass.classtype.ConcreteKlass;
 import klass.objekt.ObjectClass;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
 public class KlassFactory {
     public static Klass withAttributes(String name, List<Attribute> attributes) {
-        return withAttributesAndAnnotations(name, attributes, new ArrayList<>());
+        return withAttributesAndAnnotations(name, attributes, List.empty());
     }
 
     public static Klass emptyClass(String name) {
-        return withAttributesAndAnnotations(name, new ArrayList<>(), new ArrayList<>());
+        return withAttributesAndAnnotations(name, List.empty(), List.empty());
     }
 
     public static Klass simpleEntity(String name, Attribute primaryKey) {
-        return withAttributesAndAnnotations(name, Arrays.asList(primaryKey), Arrays.asList("@Entity"));
+        return withAttributesAndAnnotations(name, List.of(primaryKey), List.of("@Entity"));
     }
 
     public static Klass entityWithAttributes(String name, List<Attribute> attributes) {
-        return withAttributesAndAnnotations(name, attributes, Arrays.asList("@Entity"));
+        return withAttributesAndAnnotations(name, attributes, List.of("@Entity"));
     }
 
     private static Klass withAttributesAndAnnotations(String name, List<Attribute> attributes,
                                                       List<String> annotations) {
-        return new Klass(attributes, new ArrayList<>(), name, new ConcreteKlass(), ObjectClass.getInstance(),
-                new ArrayList<>(), Arrays.asList(Modifier.Public), annotations);
+        return new Klass(attributes, List.empty(), name, new ConcreteKlass(), ObjectClass.getInstance(),
+                List.empty(), List.of(Modifier.PUBLIC), annotations);
     }
 }
