@@ -2,16 +2,13 @@ package parsing;
 
 import exceptions.MultiplePrimaryKeyError;
 import exceptions.NoPrimaryKeyError;
+import io.vavr.collection.List;
 import org.junit.Before;
 import org.junit.Test;
 import persistence.tables.RegularTable;
 import persistence.tables.builders.SimpleTableBuilder;
 import utils.AttributeFactory;
 import utils.KlassFactory;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 
 import static org.junit.Assert.*;
 
@@ -25,8 +22,8 @@ public class TestPrimaryKey {
 
     @Test
     public void simpleTable() {
-        tb.parse(KlassFactory.withAttributes("EntityKlass", Collections.singletonList(AttributeFactory.pk("id", "Long"))),
-                new ArrayList<>());
+        tb.parse(KlassFactory.withAttributes("EntityKlass", List.of(AttributeFactory.pk("id", "Long"))),
+                List.empty());
         RegularTable regularTable = tb.build();
         assertEquals("id (PK)", regularTable.getPk());
         assertEquals("entity_klass", regularTable.getName());
@@ -34,13 +31,13 @@ public class TestPrimaryKey {
 
     @Test
     public void withNoPrimaryKey() {
-        assertThrows(NoPrimaryKeyError.class, () -> tb.parse(KlassFactory.emptyClass("Class"), new ArrayList<>()));
+        assertThrows(NoPrimaryKeyError.class, () -> tb.parse(KlassFactory.emptyClass("Class"), List.empty()));
     }
 
     @Test
     public void withTwoPrimaryKeys() {
         assertThrows(MultiplePrimaryKeyError.class,
-                () -> tb.parse(KlassFactory.withAttributes("Class", Arrays.asList(AttributeFactory.pk("id", "Long"),
-                        AttributeFactory.pk("pk", "Integer"))), new ArrayList<>()));
+                () -> tb.parse(KlassFactory.withAttributes("Class", List.of(AttributeFactory.pk("id", "Long"),
+                        AttributeFactory.pk("pk", "Integer"))), List.empty()));
     }
 }
